[package]
name = "csscolorparser"
version = "0.6.0"
authors = ["Nor Khasyatillah <mazznoer@ymail.com>"]
edition = "2018"
description = "CSS color parser library"
readme = "README.md"
repository = "https://github.com/mazznoer/csscolorparser-rs"
documentation = "https://docs.rs/csscolorparser/"
license = "MIT OR Apache-2.0"
keywords = ["color", "colour", "css", "parser", "parse"]
categories = ["graphics", "parser-implementations"]
exclude = [
	".github/*",
	".travis.yml",
	"tests/*",
]

[package.metadata.docs.rs]
features = ["named-colors", "lab", "rust-rgb", "cint", "serde"]

[features]
default = ["named-colors"]
named-colors = ["phf"]
rust-rgb = ["rgb"]

[dependencies]
cint = { version = "^0.2.1", optional = true }
lab = { version = "0.10.0", optional = true }
phf = { version = "0.8.0", optional = true, features = ["macros"] }
rgb = { version = "0.8.25", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_test = "1.0"
