[package]
name = "csscolorparser"
version = "0.8.0"
authors = ["Nor Khasyatillah <mazznoer@ymail.com>"]
edition = "2018"
description = "CSS color parser library"
readme = "README.md"
repository = "https://github.com/mazznoer/csscolorparser-rs"
documentation = "https://docs.rs/csscolorparser/"
license = "MIT OR Apache-2.0"
keywords = ["color", "colour", "css", "parser"]
categories = ["graphics", "parser-implementations", "no-std"]
exclude = [
	".github/*",
]

[package.metadata.docs.rs]
features = ["named-colors", "rust-rgb", "cint", "serde", "std"]

[features]
default = ["named-colors", "std"]
std = ["phf/std"]
named-colors = ["phf"]
rust-rgb = ["rgb"]

[dependencies]
cint = { version = "^0.3.1", optional = true }
phf = { version = "0.13.1", optional = true, features = ["macros"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
rgb = { version = "0.8.33", optional = true }
serde = { version = "1.0.139", optional = true, features = ["derive"] }

[dev-dependencies]
serde_test = "1.0.139"

[[test]]
name = "named_colors"
required-features = ["named-colors"]

[[example]]
name = "named-colors"
required-features = ["named-colors"]
